--- a/index.html
+++ b/index.html
@@ -36,16 +36,21 @@
             </div>
         </nav>
         <div id="leftside">
-            <video src="./resources/video.mp4" autoplay loop></video>
+            <video src="./resources/video.mp4" autoplay loop muted></video>
         </div>
         <div id="rightside">
             <div id="home">
                 <h2>Brandon Loveall: bringing ideas to life with a lot of fun along the way.</h2>
-                <p>Utah-based software developer with a focus on the backend, where all the fun challenges come up!</p>
+                <h3>Full Stack - Backend - Frontend</h3>
+                <p>Utah-based software developer with a focus on the backend, where all the fun challenges come up! No language or framework is safe from getting learned by me.</p>
             </div>
             <div id="aboutmyself">
                 <h2>So just who am I?</h2>
-                <p></p>
+                <p>My story began programming small personal projects on various platforms at a young age. I fell in love with everything that programming had to offer, from robotics to applications, and knew this passion would only continue to grow. Even when settled into a career, my desire to learn about computer science remains burning long after work is over.
+                    <br>
+                    <br>
+                    Outside of programming, nature is my solitude. Growing up in San Diego gave me beautiful beaches and hiking trails to explore and you can always spot me going for walks in the rain or snow and appreciating the weather.
+                </p>
             </div>
             <div id="myprojects">
     
@@ -55,5 +60,6 @@
             </div>
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
