--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="#myprojects"><p>My Projects</p></a>
                 <a href="#contact"><p>Contact Me</p></a>
                 <a href="./resources//brandon_loveall_resume.pdf" target="_blank"><p>View Resume</p></a>
+                <img src="./resources/menu.svg" alt="" id="menu">
             </div>
 
             <div id="media">
@@ -53,7 +54,89 @@
                 </p>
             </div>
             <div id="myprojects">
-    
+                <h2>Check out my stuff!</h2>
+                <div id="cardholder">
+                    <div class="card">
+                        <div class="title">
+                            <p>Conway's Game of Life</p>
+                        </div>
+                        <div class="imgholder">
+                            <img src="./resources/conway.png" alt="">
+                        </div>
+                        <div class="technologies">
+                            <p>
+                                React | JS | HTML/CSS
+                            </p>
+                        </div>
+                        <div class="description">
+                            <p>Recreation of Conway's Game of life using the canvas HTML element! Created to practice creating graphics for uses such as graphs and advanced diagrams. Users can place cells on the grid and "step" through the simulation.</p>
+                        </div>
+                        <div class="links">
+                            <a href="https://github.com/brandonloveall/game-of-life" class="github" target="_blank">GitHub</a>
+                            <a href="https://conways-game-of-life-hjw9.onrender.com/" class="demo" target="_blank">Demo</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="title">
+                            <p>Chirper Social Media Site</p>
+                        </div>
+                        <div class="imgholder">
+                            <img src="./resources/chirper.png" alt="">
+                        </div>
+                        <div class="technologies">
+                            <p>
+                                React | JS | Node.js | Postgres
+                            </p>
+                        </div>
+                        <div class="description">
+                            <p>Challenging myself by recreating the popular social media site Twitter. Users can login with persistent session, sign up, tweet, like tweets, edit and delete their tweets, follow users, and customize their profile.</p>
+                        </div>
+                        <div class="links">
+                            <a href="https://github.com/brandonloveall/chirper" class="github" target="_blank">GitHub</a>
+                            <a href="https://socialmediasitebloveall.herokuapp.com/" class="demo" target="_blank">Demo</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="title">
+                            <p>Country API Front End</p>
+                        </div>
+                        <div class="imgholder">
+                            <img src="./resources/countries.png" alt="">
+                        </div>
+                        <div class="technologies">
+                            <p>
+                                React | JS | HTML/CSS
+                            </p>
+                        </div>
+                        <div class="description">
+                            <p>Recreated a front end for the Country API to meet exact user specifications based off diagrams. Users can filter countries based off name and region and click on a country for more information.</p>
+                        </div>
+                        <div class="links">
+                            <a href="https://github.com/brandonloveall/country-api-react" class="github" target="_blank">GitHub</a>
+                            <a href="https://countryapisite.herokuapp.com/" class="demo" target="_blank">Demo</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="title">
+                            <p>Daybreak News</p>
+                        </div>
+                        <div class="imgholder">
+                            <img src="./resources/news.png" alt="">
+                        </div>
+                        <div class="technologies">
+                            <p>
+                                HTML/CSS | JS | Node.js | Postgres
+                            </p>
+                        </div>
+                        <div class="description">
+                            <p>My first real full stack project. Users can view a homepage of articles, view individual articles and content, view a random article, and submit their own article to be displayed for other users.</p>
+                        </div>
+                        <div class="links">
+                            <a href="https://github.com/brandonloveall/foundationscapstone" class="github" target="_blank">GitHub</a>
+                            <a href="https://capstonebloveall.herokuapp.com/" class="demo" target="_blank">Demo</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="contact">
     
