primary page done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,31 @@
     <link rel="stylesheet" href="./index.css">
     <title>Brandon Loveall</title>
 </head>
+
 <body>
     <div id="wrapper">
+        <div class="invisible" id="menudropdown"></div>
         <nav>
             <div id="initialsholder">
                 <h1>BL</h1>
             </div>
 
             <div id="links">
-                <a href="#home"><p>Home</p></a>
-                <a href="#aboutmyself"><p>About Myself</p></a>
-                <a href="#myprojects"><p>My Projects</p></a>
-                <a href="#contact"><p>Contact Me</p></a>
-                <a href="./resources//brandon_loveall_resume.pdf" target="_blank"><p>View Resume</p></a>
+                <a href="#home">
+                    <p>Home</p>
+                </a>
+                <a href="#aboutmyself">
+                    <p>About Myself</p>
+                </a>
+                <a href="#myprojects">
+                    <p>My Projects</p>
+                </a>
+                <a href="#contact">
+                    <p>Contact Me</p>
+                </a>
+                <a href="./resources//brandon_loveall_resume.pdf" target="_blank">
+                    <p>View Resume</p>
+                </a>
                 <img src="./resources/menu.svg" alt="" id="menu">
             </div>
 
@@ -43,18 +56,24 @@
             <div id="home">
                 <h2>Brandon Loveall: bringing ideas to life with a lot of fun along the way.</h2>
                 <h3>Full Stack - Backend - Frontend</h3>
-                <p>Utah-based software developer with a focus on the backend, where all the fun challenges come up! No language or framework is safe from getting learned by me.</p>
+                <p>Utah-based software developer with expertise in either end, with each one having its own unique and exciting challenges! No
+                    language or framework is safe from getting added to my skill set.</p>
             </div>
             <div id="aboutmyself">
                 <h2>So just who am I?</h2>
-                <p>My story began programming small personal projects on various platforms at a young age. I fell in love with everything that programming had to offer, from robotics to applications, and knew this passion would only continue to grow. Even when settled into a career, my desire to learn about computer science remains burning long after work is over.
+                <p>My story began programming small personal projects on various platforms at a young age. I fell in
+                    love with everything that programming had to offer, from robotics to applications, and knew this
+                    passion would only continue to grow. Even when settled into a career, my desire to learn about
+                    computer science remains burning long after work is over.
                     <br>
                     <br>
-                    Outside of programming, nature is my solitude. Growing up in San Diego gave me beautiful beaches and hiking trails to explore and you can always spot me going for walks in the rain or snow and appreciating the weather.
+                    Outside of programming, nature is my solitude. Growing up in San Diego gave me beautiful beaches and
+                    hiking trails to explore and you can always spot me going for walks in the rain or snow and
+                    appreciating the weather.
                 </p>
             </div>
             <div id="myprojects">
-                <h2>Check out my stuff!</h2>
+                <h2>Check out my projects!</h2>
                 <div id="cardholder">
                     <div class="card">
                         <div class="title">
@@ -69,11 +88,15 @@
                             </p>
                         </div>
                         <div class="description">
-                            <p>Recreation of Conway's Game of life using the canvas HTML element! Created to practice creating graphics for uses such as graphs and advanced diagrams. Users can place cells on the grid and "step" through the simulation.</p>
+                            <p>Recreation of Conway's Game of life using the canvas HTML element! Created to practice
+                                creating graphics for uses such as graphs and advanced diagrams. Users can place cells
+                                on the grid and "step" through the simulation.</p>
                         </div>
                         <div class="links">
-                            <a href="https://github.com/brandonloveall/game-of-life" class="github" target="_blank">GitHub</a>
-                            <a href="https://conways-game-of-life-hjw9.onrender.com/" class="demo" target="_blank">Demo</a>
+                            <a href="https://github.com/brandonloveall/game-of-life" class="github"
+                                target="_blank">GitHub</a>
+                            <a href="https://conways-game-of-life-hjw9.onrender.com/" class="demo"
+                                target="_blank">Demo</a>
                         </div>
                     </div>
                     <div class="card">
@@ -89,11 +112,15 @@
                             </p>
                         </div>
                         <div class="description">
-                            <p>Challenging myself by recreating the popular social media site Twitter. Users can login with persistent session, sign up, tweet, like tweets, edit and delete their tweets, follow users, and customize their profile.</p>
+                            <p>Challenging myself by recreating the popular social media site Twitter. Users can login
+                                with persistent session, sign up, tweet, like tweets, edit and delete their tweets,
+                                follow users, and customize their profile.</p>
                         </div>
                         <div class="links">
-                            <a href="https://github.com/brandonloveall/chirper" class="github" target="_blank">GitHub</a>
-                            <a href="https://socialmediasitebloveall.herokuapp.com/" class="demo" target="_blank">Demo</a>
+                            <a href="https://github.com/brandonloveall/chirper" class="github"
+                                target="_blank">GitHub</a>
+                            <a href="https://socialmediasitebloveall.herokuapp.com/" class="demo"
+                                target="_blank">Demo</a>
                         </div>
                     </div>
                     <div class="card">
@@ -109,10 +136,13 @@
                             </p>
                         </div>
                         <div class="description">
-                            <p>Recreated a front end for the Country API to meet exact user specifications based off diagrams. Users can filter countries based off name and region and click on a country for more information.</p>
+                            <p>Recreated a front end for the Country API to meet exact user specifications based off
+                                diagrams. Users can filter countries based off name and region and click on a country
+                                for more information.</p>
                         </div>
                         <div class="links">
-                            <a href="https://github.com/brandonloveall/country-api-react" class="github" target="_blank">GitHub</a>
+                            <a href="https://github.com/brandonloveall/country-api-react" class="github"
+                                target="_blank">GitHub</a>
                             <a href="https://countryapisite.herokuapp.com/" class="demo" target="_blank">Demo</a>
                         </div>
                     </div>
@@ -129,20 +159,30 @@
                             </p>
                         </div>
                         <div class="description">
-                            <p>My first real full stack project. Users can view a homepage of articles, view individual articles and content, view a random article, and submit their own article to be displayed for other users.</p>
+                            <p>My first real full stack project. Users can view a homepage of articles, view individual
+                                articles and content, view a random article, and submit their own article to be
+                                displayed for other users.</p>
                         </div>
                         <div class="links">
-                            <a href="https://github.com/brandonloveall/foundationscapstone" class="github" target="_blank">GitHub</a>
+                            <a href="https://github.com/brandonloveall/foundationscapstone" class="github"
+                                target="_blank">GitHub</a>
                             <a href="https://capstonebloveall.herokuapp.com/" class="demo" target="_blank">Demo</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div id="contact">
-    
+                <div>
+                    <h2>Contact me!</h2>
+                    <h3>I'd love to hear about any chances to grow and learn more. If you feel like you have a great opportunity to do just that, feel free to reach out to me!</h3>
+                    <p>Email - <span id="green">bloveall02@gmail.com</span></p>
+                    <p>Phone - <span id="green">+1 858-888-3732</span></p>
+                </div>
+
             </div>
         </div>
     </div>
     <script src="./index.js"></script>
 </body>
+
 </html>
