--- a/index.html
+++ b/index.html
@@ -12,7 +12,25 @@
 
 <body>
     <div id="wrapper">
-        <div class="invisible" id="menudropdown"></div>
+        <div class="invisible" id="menudropdown">
+            <div id="linksdropdown">
+                <a href="#home">
+                    <p>Home</p>
+                </a>
+                <a href="#aboutmyself">
+                    <p>About Myself</p>
+                </a>
+                <a href="#myprojects">
+                    <p>My Projects</p>
+                </a>
+                <a href="#contact">
+                    <p>Contact Me</p>
+                </a>
+                <a href="./resources//brandon_loveall_resume.pdf" target="_blank">
+                    <p>View Resume</p>
+                </a>
+            </div>
+        </div>
         <nav>
             <div id="initialsholder">
                 <h1>BL</h1>
