--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
             <div id="home">
                 <h2>Brandon Loveall: bringing ideas to life with a lot of fun along the way.</h2>
                 <h3>Full Stack - Backend - Frontend</h3>
-                <p>Utah-based software developer with expertise in either end, with each one having its own unique and exciting challenges! No
+                <p>Utah-based software developer with expertise with both front end and back end, with each one having its own unique and exciting challenges! No
                     language or framework is safe from getting added to my skill set.</p>
             </div>
             <div id="aboutmyself">
                 <h2>So just who am I?</h2>
-                <p>My story began programming small personal projects on various platforms at a young age. I fell in
+                <p>My story began by programming small personal projects on various platforms at a young age. I fell in
                     love with everything that programming had to offer, from robotics to applications, and knew this
                     passion would only continue to grow. Even when settled into a career, my desire to learn about
                     computer science remains burning long after work is over.
                     <br>
                     <br>
                     Outside of programming, nature is my solitude. Growing up in San Diego gave me beautiful beaches and
-                    hiking trails to explore and you can always spot me going for walks in the rain or snow and
+                    hiking trails to explore, and in Utah, you can always spot me going for walks in the rain or snow and
                     appreciating the weather.
                 </p>
             </div>
@@ -192,7 +192,7 @@
             <div id="contact">
                 <div>
                     <h2>Contact me!</h2>
-                    <h3>I'd love to hear about any chances to grow and learn more. If you feel like you have a great opportunity to do just that, feel free to reach out to me!</h3>
+                    <h3>I'd love to hear about any opportunitues to grow my skills and learn more. If you have a great position to do just that, feel free to reach out to me!</h3>
                     <p>Email - <span id="green">bloveall02@gmail.com</span></p>
                     <p>Phone - <span id="green">+1 858-888-3732</span></p>
                 </div>
