added image links to dropdowon

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
                 <a href="./resources//brandon_loveall_resume.pdf" target="_blank">
                     <p>View Resume</p>
                 </a>
+                
+            </div>
+            <div id="mediadropdown">
+                <a href="https://www.youtube.com/channel/UCAFp3weJEmHHl_vGF9MMX6Q" target="_blank">
+                    <img src="./resources/youtube.svg" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/brandon-loveall-128660226/" target="_blank">
+                    <img src="./resources/linkedin.svg" alt="">
+                </a>
+                <a href="https://github.com/brandonloveall" target="_blank">
+                    <img src="./resources/github.svg" alt="">
+                </a>
             </div>
         </div>
         <nav>
@@ -74,7 +86,8 @@
             <div id="home">
                 <h2>Brandon Loveall: bringing ideas to life with a lot of fun along the way.</h2>
                 <h3>Full Stack - Backend - Frontend</h3>
-                <p>Utah-based software developer with expertise with both front end and back end, with each one having its own unique and exciting challenges! No
+                <p>Utah-based software developer with expertise with both front end and back end, with each one having
+                    its own unique and exciting challenges! No
                     language or framework is safe from getting added to my skill set.</p>
             </div>
             <div id="aboutmyself">
@@ -86,7 +99,8 @@
                     <br>
                     <br>
                     Outside of programming, nature is my solitude. Growing up in San Diego gave me beautiful beaches and
-                    hiking trails to explore, and in Utah, you can always spot me going for walks in the rain or snow and
+                    hiking trails to explore, and in Utah, you can always spot me going for walks in the rain or snow
+                    and
                     appreciating the weather.
                 </p>
             </div>
@@ -192,11 +206,11 @@
             <div id="contact">
                 <div>
                     <h2>Contact me!</h2>
-                    <h3>I'd love to hear about any opportunitues to grow my skills and learn more. If you have a great position to do just that, feel free to reach out to me!</h3>
+                    <h3>I'd love to hear about any opportunitues to grow my skills and learn more. If you have a great
+                        position to do just that, feel free to reach out to me!</h3>
                     <p>Email - <span id="green">bloveall02@gmail.com</span></p>
                     <p>Phone - <span id="green">+1 858-888-3732</span></p>
                 </div>
-
             </div>
         </div>
     </div>
