added skills, edited readme

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <a href="#aboutmyself">
                     <p>About Myself</p>
                 </a>
+                <a href="#mytechstack">
+                    <p>Skills</p>
+                </a>
                 <a href="#myprojects">
                     <p>My Projects</p>
                 </a>
@@ -29,7 +32,7 @@
                 <a href="./resources//brandon_loveall_resume.pdf" target="_blank">
                     <p>View Resume</p>
                 </a>
-                
+
             </div>
             <div id="mediadropdown">
                 <a href="https://www.linkedin.com/in/brandon-loveall-128660226/" target="_blank">
@@ -51,6 +54,9 @@
                 </a>
                 <a href="#aboutmyself">
                     <p>About Myself</p>
+                </a>
+                <a href="#mytechstack">
+                    <p>Skills</p>
                 </a>
                 <a href="#myprojects">
                     <p>My Projects</p>
@@ -97,6 +103,47 @@
                     and
                     appreciating the weather.
                 </p>
+            </div>
+            <div id="mytechstack">
+                <h2>Skills</h2>
+                <div id="skillsholder">
+                    <div class="skill">
+                        <img src="./resources/javascript.png" alt="JavaScript" title="JavaScript">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/node.webp" alt="Node.js" title="Node.js">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/html5.png" alt="HTML5" title="HTML5">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/css.png" alt="CSS" title="CSS">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/python.webp" alt="Python" title="Python">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/git.png" alt="Git" title="Git">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/sql.png" alt="SQL" title="SQL">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/aws.webp" alt="AWS" title="AWS">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/typescript.png" alt="TypeScript" title="TypeScript">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/postgres.png" alt="Postgres" title="Postgres">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/react.png" alt="React" title="React">
+                    </div>
+                    <div class="skill">
+                        <img src="./resources/angular.png" alt="Angular" title="Angular">
+                    </div>
+                </div>
             </div>
             <div id="myprojects">
                 <h2>Check out my projects!</h2>
