--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
                 <a href="#mytechstack">
                     <p>Skills</p>
                 </a>
-                <a href="#myprojects">
-                    <p>My Projects</p>
-                </a>
                 <a href="#contact">
                     <p>Contact Me</p>
                 </a>
@@ -84,9 +81,9 @@
         </div>
         <div id="rightside">
             <div id="home">
-                <h2>Brandon Loveall: bringing ideas to life with a lot of fun along the way.</h2>
+                <h2>Brandon Loveall - Nice to meet you!</h2>
                 <h3>Full Stack - Backend - Frontend</h3>
-                <p>Utah-based software developer with expertise with both front end and back end, with each one having
+                <p>Utah-based software developer with expertise in both front-end and back-end, with each one having
                     its own unique and exciting challenges! No
                     language or framework is safe from getting added to my skill set.</p>
             </div>
@@ -120,12 +117,6 @@
                         <img src="./resources/css.png" alt="CSS" title="CSS">
                     </div>
                     <div class="skill">
-                        <img src="./resources/python.webp" alt="Python" title="Python">
-                    </div>
-                    <div class="skill">
-                        <img src="./resources/git.png" alt="Git" title="Git">
-                    </div>
-                    <div class="skill">
                         <img src="./resources/sql.png" alt="SQL" title="SQL">
                     </div>
                     <div class="skill">
@@ -143,104 +134,8 @@
                     <div class="skill">
                         <img src="./resources/angular.png" alt="Angular" title="Angular">
                     </div>
-                </div>
-            </div>
-            <div id="myprojects">
-                <h2>Check out my projects!</h2>
-                <div id="cardholder">
-                    <div class="card">
-                        <div class="title">
-                            <p>Conway's Game of Life</p>
-                        </div>
-                        <div class="imgholder">
-                            <img src="./resources/conway.png" alt="">
-                        </div>
-                        <div class="technologies">
-                            <p>
-                                React | JS | HTML/CSS
-                            </p>
-                        </div>
-                        <div class="description">
-                            <p>Recreation of Conway's Game of life using the canvas HTML element! Created to practice
-                                creating graphics for uses such as graphs and advanced diagrams. Users can place cells
-                                on the grid and "step" through the simulation.</p>
-                        </div>
-                        <div class="links">
-                            <a href="https://github.com/brandonloveall/game-of-life" class="github"
-                                target="_blank">GitHub</a>
-                            <a href="https://conways-game-of-life-hjw9.onrender.com/" class="demo"
-                                target="_blank">Demo</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="title">
-                            <p>Chirper Social Media Site</p>
-                        </div>
-                        <div class="imgholder">
-                            <img src="./resources/chirper.png" alt="">
-                        </div>
-                        <div class="technologies">
-                            <p>
-                                React | JS | Node.js | Postgres
-                            </p>
-                        </div>
-                        <div class="description">
-                            <p>Challenging myself by recreating the popular social media site Twitter. Users can login
-                                with persistent session, sign up, tweet, like tweets, edit and delete their tweets,
-                                follow users, and customize their profile.</p>
-                        </div>
-                        <div class="links">
-                            <a href="https://github.com/brandonloveall/chirper" class="github"
-                                target="_blank">GitHub</a>
-                            <a href="https://socialmediasitebloveall.herokuapp.com/" class="demo"
-                                target="_blank">Demo</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="title">
-                            <p>Country API Front End</p>
-                        </div>
-                        <div class="imgholder">
-                            <img src="./resources/countries.png" alt="">
-                        </div>
-                        <div class="technologies">
-                            <p>
-                                React | JS | HTML/CSS
-                            </p>
-                        </div>
-                        <div class="description">
-                            <p>Recreated a front end for the Country API to meet exact user specifications based off
-                                diagrams. Users can filter countries based off name and region and click on a country
-                                for more information.</p>
-                        </div>
-                        <div class="links">
-                            <a href="https://github.com/brandonloveall/country-api-react" class="github"
-                                target="_blank">GitHub</a>
-                            <a href="https://countryapisite.herokuapp.com/" class="demo" target="_blank">Demo</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="title">
-                            <p>Daybreak News</p>
-                        </div>
-                        <div class="imgholder">
-                            <img src="./resources/news.png" alt="">
-                        </div>
-                        <div class="technologies">
-                            <p>
-                                HTML/CSS | JS | Node.js | Postgres
-                            </p>
-                        </div>
-                        <div class="description">
-                            <p>My first real full stack project. Users can view a homepage of articles, view individual
-                                articles and content, view a random article, and submit their own article to be
-                                displayed for other users.</p>
-                        </div>
-                        <div class="links">
-                            <a href="https://github.com/brandonloveall/foundationscapstone" class="github"
-                                target="_blank">GitHub</a>
-                            <a href="https://capstonebloveall.herokuapp.com/" class="demo" target="_blank">Demo</a>
-                        </div>
+                    <div class="skill">
+                        <img src="./resources/GraphQL_Logo.svg.png" alt="GraphQL" title="GraphQL">
                     </div>
                 </div>
             </div>
