--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     <div class="skill">
                         <img src="./resources/GraphQL_Logo.svg.png" alt="GraphQL" title="GraphQL">
                     </div>
+                    <div class="skill">
+                        <img src="./resources/file_type_go_gopher_icon_130571.png" alt="Go" title="Go">
+                    </div>
                 </div>
             </div>
             <div id="contact">
