--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div id="home">
                 <h2>Brandon Loveall - Nice to meet you!</h2>
                 <h3>Full Stack - Backend - Frontend</h3>
-                <p>Utah-based software developer with expertise in both front-end and back-end, with each one having
+                <p>Utah-based software developer with skills in both front-end and back-end, with each one having
                     its own unique and exciting challenges! No
                     language or framework is safe from getting added to my skill set.</p>
             </div>
@@ -111,16 +111,10 @@
                         <img src="./resources/node.webp" alt="Node.js" title="Node.js">
                     </div>
                     <div class="skill">
-                        <img src="./resources/html5.png" alt="HTML5" title="HTML5">
-                    </div>
-                    <div class="skill">
                         <img src="./resources/css.png" alt="CSS" title="CSS">
                     </div>
                     <div class="skill">
                         <img src="./resources/sql.png" alt="SQL" title="SQL">
-                    </div>
-                    <div class="skill">
-                        <img src="./resources/aws.webp" alt="AWS" title="AWS">
                     </div>
                     <div class="skill">
                         <img src="./resources/typescript.png" alt="TypeScript" title="TypeScript">
